--- a/app/assets/stylesheets/shared/general.scss
+++ b/app/assets/stylesheets/shared/general.scss
@@ -87,7 +87,7 @@
 // If h1 isn't big enough to satisfy your needs, then use h0! Probably use for banners in
 // combination with the white class.
 .h0 {
-  font-size: 5em;
+  font-size: 4em;
   text-align: center;
 }
 
